# hifimagnet.paraview

./: .gitattributes  .gitignore  .readthedocs.yml  README.md  REVIEW.md  archive.sh  fieldunits.json  ignored_keys.json  pyproject.toml  start-venv.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docs.yml  tests.yml
debian/: .gitignore  README.md  control  copyright  docs  install  rules  watch
docs/: .gitignore  GITHUB_PAGES_SETUP.md  GIT_LFS.md  QUICKSTART.md  README.md  api.rst  cli.rst  conf.py  development.rst  examples.rst  index.rst  installation.rst  modules.rst  usage.rst
docs/testing/: image-comparison.md
prompts/: testsuite-claude.md  testsuite-improvements.md
python_hifimagnetParaview/: __init__.py  cli.py  compare.py  json.py  meshinfo.py  method.py  view.py
python_hifimagnetParaview/case2D/: __init__.py
python_hifimagnetParaview/case3D/: __init__.py  method3D.py
python_hifimagnetParaview/caseAxi/: __init__.py
scripts/: README.md  migrate-to-lfs.sh
test/: README.md  base_test.py  conftest.py  test_2D.py  test_3D.py  test_Axi.py  test_unit.py  tolerances.py
